Added helps for NodeLoadScoringRule.

--- a/src/main/resources/jp/ikedam/jenkins/plugins/scoringloadbalancer/rules/BuildResultScoringRule/help.html
+++ b/src/main/resources/jp/ikedam/jenkins/plugins/scoringloadbalancer/rules/BuildResultScoringRule/help.html
@@ -16,10 +16,10 @@ See followings for details.
 <tr>
   <th>scale</th>
   <td>=</td>
-  <td>(Scale for Scores) + (adjust score)</td>
+  <td>(Scale for Scores) + (adjust scale)</td>
 </tr>
 <tr>
-  <th>scale</th>
+  <th>adjust scale</th>
   <td>=</td>
   <td>(Scale Adjustment for Older Builds) * (# of builds from the last build)</td>
 </tr>
